[SYNCOPE-1614] Spring Boot HealthIndicator and InfoContributor for all components